--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width", initial-scale="1.0">
      <meta http-equive="X-UA-Compatible">
-     <title>Document</title>
+     <title>Document</title>   
+<p>HOLA</p>
   <style>
     body {
-      background-color:green;
-      color:#fff;
+      background-color:gray;
       text-align:center;
     }
   </style>
-<head>
-     HOLA
+</head>
+  
 <body>
 <h1><h1>
 </body>
