--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <p>HOLA</p>
   <style>
     body {
-      background-color:gray;
+      background-color: blue;
       text-align:center;
     }
   </style>
