--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <p>HOLA</p>
   <style>
     body {
-      background-color: #808080;
+      background-color: 8ff7ff;
       text-align:center;
     }
   </style>
